--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -2,20 +2,29 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkAdjustment" id="p_color_clouds_adjustment">
-    <property name="upper">255</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+  <object class="GtkAdjustment" id="p_channel_a_end_adjustment">
+    <property name="lower">-1</property>
+    <property name="upper">1</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">0.5</property>
   </object>
-  <object class="GtkAdjustment" id="p_color_vegetation_adjustment">
-    <property name="upper">255</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+  <object class="GtkAdjustment" id="p_channel_a_start_adjustment">
+    <property name="lower">-1</property>
+    <property name="upper">1</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">0.5</property>
   </object>
-  <object class="GtkAdjustment" id="p_color_water_adjustment">
-    <property name="upper">255</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+  <object class="GtkAdjustment" id="p_channel_b_end_adjustment">
+    <property name="lower">-1</property>
+    <property name="upper">1</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">0.5</property>
+  </object>
+  <object class="GtkAdjustment" id="p_channel_b_start_adjustment">
+    <property name="lower">-1</property>
+    <property name="upper">1</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">0.5</property>
   </object>
   <object class="GtkAdjustment" id="p_hs_adjustment">
     <property name="upper">23</property>
@@ -523,6 +532,112 @@
                                                 <property name="expand">False</property>
                                                 <property name="fill">True</property>
                                                 <property name="position">2</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkLabel">
+                                                <property name="visible">True</property>
+                                                <property name="can-focus">False</property>
+                                                <property name="label" translatable="yes">Channel A tuning:</property>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">True</property>
+                                                <property name="position">3</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkBox">
+                                                <property name="visible">True</property>
+                                                <property name="can-focus">False</property>
+                                                <child>
+                                                  <object class="GtkScale">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">True</property>
+                                                    <property name="adjustment">p_channel_a_start_adjustment</property>
+                                                    <property name="restrict-to-fill-level">False</property>
+                                                    <property name="draw-value">False</property>
+                                                    <property name="has-origin">False</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">True</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkScale">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">True</property>
+                                                    <property name="adjustment">p_channel_a_end_adjustment</property>
+                                                    <property name="restrict-to-fill-level">False</property>
+                                                    <property name="draw-value">False</property>
+                                                    <property name="has-origin">False</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">True</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">True</property>
+                                                <property name="position">4</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkLabel">
+                                                <property name="visible">True</property>
+                                                <property name="can-focus">False</property>
+                                                <property name="label" translatable="yes">Channel B tuning:</property>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">True</property>
+                                                <property name="position">5</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkBox">
+                                                <property name="visible">True</property>
+                                                <property name="can-focus">False</property>
+                                                <child>
+                                                  <object class="GtkScale">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">True</property>
+                                                    <property name="adjustment">p_channel_b_start_adjustment</property>
+                                                    <property name="restrict-to-fill-level">False</property>
+                                                    <property name="draw-value">False</property>
+                                                    <property name="has-origin">False</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">True</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkScale">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">True</property>
+                                                    <property name="adjustment">p_channel_b_end_adjustment</property>
+                                                    <property name="restrict-to-fill-level">False</property>
+                                                    <property name="draw-value">False</property>
+                                                    <property name="has-origin">False</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">True</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">True</property>
+                                                <property name="position">6</property>
                                               </packing>
                                             </child>
                                           </object>
