--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -551,7 +551,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">False</property>
                                                 <child>
-                                                  <object class="GtkScale">
+                                                  <object class="GtkScale" id="p_channel_a_start_scale">
                                                     <property name="visible">True</property>
                                                     <property name="can-focus">True</property>
                                                     <property name="adjustment">p_channel_a_start_adjustment</property>
@@ -566,7 +566,7 @@
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkScale">
+                                                  <object class="GtkScale" id="p_channel_a_end_scale">
                                                     <property name="visible">True</property>
                                                     <property name="can-focus">True</property>
                                                     <property name="adjustment">p_channel_a_end_adjustment</property>
@@ -604,7 +604,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">False</property>
                                                 <child>
-                                                  <object class="GtkScale">
+                                                  <object class="GtkScale" id="p_channel_b_start_scale">
                                                     <property name="visible">True</property>
                                                     <property name="can-focus">True</property>
                                                     <property name="adjustment">p_channel_b_start_adjustment</property>
@@ -619,7 +619,7 @@
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkScale">
+                                                  <object class="GtkScale" id="p_channel_b_end_scale">
                                                     <property name="visible">True</property>
                                                     <property name="can-focus">True</property>
                                                     <property name="adjustment">p_channel_b_end_adjustment</property>
