--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -6,25 +6,25 @@
     <property name="lower">-1</property>
     <property name="upper">1</property>
     <property name="step-increment">0.10</property>
-    <property name="page-increment">0.5</property>
+    <property name="page-increment">0.10</property>
   </object>
   <object class="GtkAdjustment" id="p_channel_a_start_adjustment">
     <property name="lower">-1</property>
     <property name="upper">1</property>
     <property name="step-increment">0.10</property>
-    <property name="page-increment">0.5</property>
+    <property name="page-increment">0.10</property>
   </object>
   <object class="GtkAdjustment" id="p_channel_b_end_adjustment">
     <property name="lower">-1</property>
     <property name="upper">1</property>
     <property name="step-increment">0.10</property>
-    <property name="page-increment">0.5</property>
+    <property name="page-increment">0.10</property>
   </object>
   <object class="GtkAdjustment" id="p_channel_b_start_adjustment">
     <property name="lower">-1</property>
     <property name="upper">1</property>
     <property name="step-increment">0.10</property>
-    <property name="page-increment">0.5</property>
+    <property name="page-increment">0.10</property>
   </object>
   <object class="GtkAdjustment" id="p_hs_adjustment">
     <property name="upper">23</property>
@@ -35,7 +35,7 @@
     <property name="lower">90</property>
     <property name="upper">110</property>
     <property name="value">100</property>
-    <property name="step-increment">0.10000000022351742</property>
+    <property name="step-increment">0.10</property>
     <property name="page-increment">1</property>
   </object>
   <object class="GtkAdjustment" id="p_min_adjustment">
@@ -1254,18 +1254,44 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="p_process_button">
-                        <property name="label" translatable="yes">Process</property>
+                      <object class="GtkBox">
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
-                        <property name="can-focus">True</property>
-                        <property name="receives-default">True</property>
-                        <property name="tooltip-text" translatable="yes">Process image decoded on the previous step.</property>
-                        <property name="halign">end</property>
-                        <property name="margin-left">10</property>
-                        <property name="margin-right">10</property>
-                        <property name="margin-top">10</property>
-                        <property name="margin-bottom">10</property>
+                        <property name="can-focus">False</property>
+                        <child>
+                          <object class="GtkCheckButton" id="p_auto_update_check">
+                            <property name="label" translatable="yes">Auto update</property>
+                            <property name="visible">True</property>
+                            <property name="can-focus">True</property>
+                            <property name="receives-default">False</property>
+                            <property name="halign">end</property>
+                            <property name="draw-indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="p_process_button">
+                            <property name="label" translatable="yes">Process</property>
+                            <property name="visible">True</property>
+                            <property name="sensitive">False</property>
+                            <property name="can-focus">True</property>
+                            <property name="receives-default">True</property>
+                            <property name="tooltip-text" translatable="yes">Process image decoded on the previous step.</property>
+                            <property name="halign">end</property>
+                            <property name="margin-left">10</property>
+                            <property name="margin-right">10</property>
+                            <property name="margin-top">10</property>
+                            <property name="margin-bottom">10</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
                       </object>
                       <packing>
                         <property name="expand">False</property>
